--- a/.github/workflows/phpapi.yaml
+++ b/.github/workflows/phpapi.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       - name: Docker build
         run: |
           echo ${{ secrets.DOCKERTOKEN }} |  docker login -u aolishchuk --password-stdin
